@@ -138,7 +138,7 @@ gdb_expect {
 if ![gdb_skip_stdio_test "print print_struct_rep(*struct1)"] {
     send_gdb "print print_struct_rep(*struct1)\n"
     gdb_expect {
-	-re ".*Contents of struct1:\[ \t\n\r\]+22\[ \t\]+0\[ \t\n\r\]+.\[0-9\]+ = \{value = 5, head = 0\}.*$gdb_prompt $" {
+	-re ".*Contents of struct1:\[ \t\n\r\]+22\[ \t\]+0\[ \t\n\r\]+.\[0-9\]+ = \\{value = 5, head = 0\\}.*$gdb_prompt $" {
 	    pass "print print_struct_rep(*struct1, *struct2, *struct3)"
 	}
 	-re ".*$gdb_prompt $" { 
@@ -153,7 +153,7 @@ if ![gdb_skip_stdio_test "print print_struct_rep(*struct1)"] {
 if ![gdb_skip_stdio_test "print print_one_large_struct(...)"] {
     send_gdb "print print_one_large_struct(*list1)\n"
     gdb_expect {
-	-re ".*\[ \t\]+4\[ \t\]+1\[ \r\n\]+.\[0-9\]+ = \{next_index = \{1, 2, 3, 4, 5, 6, 7, 8, 9, 10\}, values = \{4, 6, 8, 10, 12, 14, 16, 18, 20, 22\}, head = 0\}.*$gdb_prompt $" {
+	-re ".*\[ \t\]+4\[ \t\]+1\[ \r\n\]+.\[0-9\]+ = \\{next_index = \\{1, 2, 3, 4, 5, 6, 7, 8, 9, 10\\}, values = \\{4, 6, 8, 10, 12, 14, 16, 18, 20, 22\\}, head = 0\\}.*$gdb_prompt $" {
 	    pass "print print_one_large_struct(*list1)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_one_large_struct(*list1)" }
@@ -165,7 +165,7 @@ if {![gdb_skip_float_test "print print_one_double(*d1)"] && \
     ![gdb_skip_stdio_test "print print_one_double(*d1)"] } {
     send_gdb "print print_one_double(*d1)\n";
     gdb_expect {
-	-re ".*Contents of one_double_t:\[ \r\n\]+1\\.111110\[ \r\n\]+.\[0-9\]+ = \{double1 = 1\\.11111\}.*$gdb_prompt $" {
+	-re ".*Contents of one_double_t:\[ \r\n\]+1\\.111110\[ \r\n\]+.\[0-9\]+ = \\{double1 = 1\\.11111\\}.*$gdb_prompt $" {
 	    pass "print print_one_double(*d1)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_one_double(*d1)" }
@@ -177,7 +177,7 @@ if {![gdb_skip_float_test "print print_two_floats(*f3)"] && \
     ![gdb_skip_stdio_test "print print_two_floats(*f3)"] } {
     send_gdb "print print_two_floats(*f3)\n"
     gdb_expect {
-	-re ".*Contents of two_floats_t:\[ \r\n\]+-2\\.345000\[ \t]+1\\.000000\[ \r\n\]+.\[0-9\]+ = \{float1 = -2\\.34500003, float2 = 1\}.*$gdb_prompt $" {
+	-re ".*Contents of two_floats_t:\[ \r\n\]+-2\\.345000\[ \t]+1\\.000000\[ \r\n\]+.\[0-9\]+ = \\{float1 = -2\\.34500003, float2 = 1\\}.*$gdb_prompt $" {
 	    pass "print print_two_floats(*f3)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_two_floats(*f3)" }
@@ -188,7 +188,7 @@ if {![gdb_skip_float_test "print print_two_floats(*f3)"] && \
 if ![gdb_skip_stdio_test "print print_bit_flags(*flags)"] {
     send_gdb "print print_bit_flags(*flags)\n"
     gdb_expect {
-	-re ".*alpha\[ \r\n\]+gamma\[ \r\n\]+epsilon\[ \r\n\]+.\[0-9\]+ = \{alpha = 1, beta = 0, gamma = 1, delta = 0, epsilon = 1, omega = 0\}\[ \r\n\]+$gdb_prompt $" {
+	-re ".*alpha\[ \r\n\]+gamma\[ \r\n\]+epsilon\[ \r\n\]+.\[0-9\]+ = \\{alpha = 1, beta = 0, gamma = 1, delta = 0, epsilon = 1, omega = 0\\}\[ \r\n\]+$gdb_prompt $" {
 	    pass "print print_bit_flags(*flags)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_bit_flags(*flags)" }
@@ -199,7 +199,7 @@ if ![gdb_skip_stdio_test "print print_bit_flags(*flags)"] {
 if ![gdb_skip_stdio_test "print print_bit_flags_combo(*flags_combo)"] {
     send_gdb "print print_bit_flags_combo(*flags_combo)\n"
     gdb_expect {
-	-re ".*alpha\[ \r\n\]+gamma\[ \r\n\]+epsilon\[ \r\n\]+ch1: y\[ \t\]+ch2: n\[ \r\n\]+.\[0-9\]+ = \{alpha = 1, beta = 0, ch1 = 121 'y', gamma = 1, delta = 0, ch2 = 110 'n', epsilon = 1, omega = 0\}\[ \r\n\]+$gdb_prompt $" {
+	-re ".*alpha\[ \r\n\]+gamma\[ \r\n\]+epsilon\[ \r\n\]+ch1: y\[ \t\]+ch2: n\[ \r\n\]+.\[0-9\]+ = \\{alpha = 1, beta = 0, ch1 = 121 'y', gamma = 1, delta = 0, ch2 = 110 'n', epsilon = 1, omega = 0\\}\[ \r\n\]+$gdb_prompt $" {
 	    pass "print print_bit_flags_combo(*flags_combo)"
 	}
 	-re ".*$gdb_prompt $" { 
@@ -214,7 +214,7 @@ if ![gdb_skip_stdio_test "print print_bit_flags_combo(*flags_combo)"] {
 if ![gdb_skip_stdio_test "print print_three_chars(*three_chars)"] {
     send_gdb "print print_three_chars(*three_char)\n"
     gdb_expect {
-	-re ".*Contents of three_char_t:\[ \r\n\]+x\[ \t\]+y\[ \t\]+z\[ \r\n\]+.\[0-9\]+ = \{ch1 = 120 'x', ch2 = 121 'y', ch3 = 122 'z'\}\[ \r\n\]+$gdb_prompt $" {
+	-re ".*Contents of three_char_t:\[ \r\n\]+x\[ \t\]+y\[ \t\]+z\[ \r\n\]+.\[0-9\]+ = \\{ch1 = 120 'x', ch2 = 121 'y', ch3 = 122 'z'\\}\[ \r\n\]+$gdb_prompt $" {
 	    pass "print print_three_chars(*three_char)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_three_chars(*three_char)" }
@@ -225,7 +225,7 @@ if ![gdb_skip_stdio_test "print print_three_chars(*three_chars)"] {
 if ![gdb_skip_stdio_test "print print_five_chars(*five_chars)"] {
     send_gdb "print print_five_chars(*five_char)\n"
     gdb_expect {
-	-re ".*Contents of five_char_t:\[ \r\n\]+h\[ \t\]+e\[ \t\]+l\[ \t\]+l\[ \t\]+o\[ \r\n\]+.\[0-9\]+ = \{ch1 = 104 'h', ch2 = 101 'e', ch3 = 108 'l', ch4 = 108 'l', ch5 = 111 'o'\}\[ \r\n\]+$gdb_prompt $" {
+	-re ".*Contents of five_char_t:\[ \r\n\]+h\[ \t\]+e\[ \t\]+l\[ \t\]+l\[ \t\]+o\[ \r\n\]+.\[0-9\]+ = \\{ch1 = 104 'h', ch2 = 101 'e', ch3 = 108 'l', ch4 = 108 'l', ch5 = 111 'o'\\}\[ \r\n\]+$gdb_prompt $" {
 	    pass "print print_five_chars(*five_char)"
 	}
 	-re ".*$gdb_prompt $" { fail "print print_five_chars(*five_char)" }
@@ -236,7 +236,7 @@ if ![gdb_skip_stdio_test "print print_five_chars(*five_chars)"] {
 if ![gdb_skip_stdio_test "print print_int_char_combo(*int_char_combo)"] {
     send_gdb "print print_int_char_combo(*int_char_combo)\n"
     gdb_expect {
-	-re ".*Contents of int_char_combo_t:\[ \r\n\]+13\[ \t\]+!\[ \r\n\]+.\[0-9\]+ = \{int1 = 13, ch1 = 33 '!'\}\[ \r\n\]+$gdb_prompt $" {
+	-re ".*Contents of int_char_combo_t:\[ \r\n\]+13\[ \t\]+!\[ \r\n\]+.\[0-9\]+ = \\{int1 = 13, ch1 = 33 '!'\\}\[ \r\n\]+$gdb_prompt $" {
 	    pass "print print_int_char_combo(*int_char_combo)"
 	}
 	-re ".*$gdb_prompt $" { 
